--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     }
   ],
   "require": {
-    "magento/framework": "*",
+    "magento/framework": "^100.1|^101.0|^102.0",
     "php": ">=7.0.0"
   },
   "require-dev":{
