--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,33 @@
 {
-  "name": "yireo-training/magento2-example-knockout",
-  "type": "magento2-module",
-  "version": "0.0.2",
-  "license": "OSL-3.0",
-  "description": "Example module demonstrating usage of Knockout syntax",
-  "keywords":[ "composer-installer", "magento"],
-  "authors": [
-    {
-      "name": "Jisse Reitsma (Yireo)",
-      "email": "jisse@yireo.com"
-    }
-  ],
-  "require": {
-    "magento/framework": "^100.1|^101.0|^102.0",
-    "php": ">=7.0.0"
-  },
-  "require-dev":{
-    "phpunit/phpunit":"*",
-    "composer/composer":"*@dev"
-  },
-  "autoload": {
-    "psr-4": {
-      "Yireo\\ExampleKnockout\\": ""
+    "name": "yireo-training/magento2-example-knockout",
+    "type": "magento2-module",
+    "version": "0.0.2",
+    "license": "OSL-3.0",
+    "description": "Example module demonstrating usage of Knockout syntax",
+    "keywords": [
+        "composer-installer",
+        "magento"
+    ],
+    "authors": [
+        {
+            "name": "Jisse Reitsma (Yireo)",
+            "email": "jisse@yireo.com"
+        }
+    ],
+    "require": {
+        "magento/framework": "^100.1|^101.0|^102.0|^103.0",
+        "php": ">=7.3.0"
     },
-    "files": [
-      "registration.php"
-    ]
-  }
+    "require-dev": {
+        "phpunit/phpunit": "*",
+        "composer/composer": "*@dev"
+    },
+    "autoload": {
+        "psr-4": {
+            "Yireo\\ExampleKnockout\\": ""
+        },
+        "files": [
+            "registration.php"
+        ]
+    }
 }
